# Imebra_4_0_11_1

./: README.md  readme.rst  setup.py
examples/changeTransferSyntax/: CMakeLists.txt  changeTransferSyntax.cpp
examples/dicom2jpeg/: CMakeLists.txt  dicom2jpeg.cpp
examples/dicomdirItems/: CMakeLists.txt  dicomdirItems.cpp
tests/: CImbx_tests.cpp  CMakeLists.txt  bitTransformTest.cpp  buildImageForTest.cpp  buildImageForTest.h  colorConversionTest.cpp  corruptedFilesTest.cpp  dataSetTest.cpp  dateTimeHandlerTest.cpp  dicomCodecTest.cpp  dicomDictionaryTest.cpp  dicomDirTest.cpp  drawBitmapTest.cpp  exceptionsTest.cpp  jpegCodecTest.cpp  lutTest.cpp  memoryTest.cpp  modalityVoilutTests.cpp  multipleImagesTest.cpp  numericHandlerTest.cpp  paletteTest.cpp  stringHandlerTest.cpp  transformsChainTest.cpp  unicodeStringHandlerTest.cpp  voilutTests.cpp
tests/objectivec/: objectivecTest.mm
tests/python/: tests.py
wrappers/: python_wrapper.cxx  swig.i
wrappers/javaWrapper/: AndroidManifest.xml
wrappers/javaWrapper/jni/: Android.mk
wrappers/javaWrapper/src/com/imebra/: imebraJNI.java
wrappers/pythonWrapper/: imebra.py
